Error img Solved

--- a/frontend/ecommerce/src/app/pages/home/vendedores/vendedores.component.html
+++ b/frontend/ecommerce/src/app/pages/home/vendedores/vendedores.component.html
@@ -9,7 +9,7 @@
           
           <a [routerLink]="['/vendedor', cuenta.id]">
           <div class="card shadow h-100 pb-2">
-              <a href="link"><img class="card-img-top no-border-top-left" src="{{cuenta.user_img.img_route}}" alt="Responsive image" height="350px" width="600px"></a>
+              <a href="link"><img class="card-img-top no-border-top-left" src="{{cuenta.user_img.img_route}}" alt="Responsive image" height="350px" width="600px" style="object-fit: cover;"></a>
               <div class="card-body mb-0 pb-0">
                 <h5 class="card-title"><a href="linnk">{{cuenta.first_name}}&nbsp;{{cuenta.last_name}} </a> </h5>
  
