--- a/frontend/ecommerce/src/app/pages/home/detalle-producto/detalle-producto.component.html
+++ b/frontend/ecommerce/src/app/pages/home/detalle-producto/detalle-producto.component.html
@@ -30,7 +30,7 @@
             </div>
           </div>
           <div class="mx-4">
-            <button type="Button" class="btn btn-carrito mx-3 lg-2" (click)="handleAddProduct()">Agregar al carrito
+            <button type="Button" class="btn btn-carrito mx-3 lg-2" (click)="addCarrito(detalleProducto?.product_id.id)">Agregar al carrito
               <a class="mx-2"><img src="assets/icons/carritoRojo.png" style="width: 20px;" alt=""></a>
             </button>
           </div>
